tests/expectations/compiler/finalize/set_in_an_assignment_fail.out
Error [EAST0372017]: The name `result` is defined multiple times.
    --> compiler-test:12:9
     |
  11 |       let result: () = Mapping::set(amounts, addr, amount);
     |           ^^^^^^ previous definition of `result` here
  12 |       let result: u128 = Mapping::set(amounts, addr, amount);
     |           ^^^^^^ `result` redefined here
